# advent_of_code

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
src/day_01/: solution.py
src/day_02/: solution.py
src/day_03/: solution.py
tests/: test_day_01.py  test_day_02.py  test_day_03.py
year_2023/src/day_01/: solution.py
year_2023/src/day_02/: solution.py
year_2023/src/day_03/: solution.py
year_2023/tests/: test_day_01.py  test_day_02.py  test_day_03.py
year_2024/: _utils.py
year_2024/day_01/: solution.py
