[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Solving Advent of Code puzzles year by year"
authors = ["jm-glowienke <jmglowienke@gmail.com>"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
pytest = "^8.3.4"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
